<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:weightSum="1"
    android:layout_margin="@dimen/fab_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        style="@style/style_title"
        android:layout_margin="@dimen/app_margin"/>
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="161dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            style="@style/style_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="@string/sort" />

        <Spinner
            android:id="@+id/spinner_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.07"
            android:entries="@array/sort_array" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/style_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="@string/news_desk_value" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.032"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkTv_art"
                style="@style/style_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art"
                android:layout_marginBottom="@dimen/app_margin"/>

            <CheckBox
                android:id="@+id/checkTv_FashionAndStyle"
                style="@style/style_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion_style"
                android:layout_marginBottom="@dimen/app_margin"/>

            <CheckBox
                android:id="@+id/checkTv_sports"
                style="@style/style_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center"
        style="@style/ButtonStyle"
        />

</LinearLayout>